set1/calnder_concept.txt
from selenium import webdriver

browser = webdriver.Chrome("C:\\Users\\I340968\\Desktop\\Desktop\\chromedriver_win32\\chromedriver.exe")

browser.get("https://www.seleniumhq.org")

browser = webdriver.Chrome("C:\\Users\\I340968\\Desktop\\Desktop\\chromedriver_win32\\chromedriver.exe")

browser.get("https://www.seleniumhq.org")

elem = browser.find_element_by_link_text('Download')

elem.click()

search = browser.find_element_by_id('q')

search.send_keys('Downloads')
=====================
##  time

=================

from datetime import datetime
from datetime import datetime as dt
dt.now()
print(dt.now())
import pytz
tz=pytz.timezone('Singapore')
print(dt.now(tz))
#singapore is an identifier not used as country
#list of all timezone present in pyton
pytz.all_timezones
len(pytz.all_timezones)
Out[44]: 593

import calendar

calendar.weekday(2018,7,06)
  File "<ipython-input-47-1065012aed44>", line 1
    calendar.weekday(2018,7,06)
                             ^
SyntaxError: invalid token




calendar.weekday(2018,7,6)
Out[48]: 4

calendar.weekday(2018,7,14)
Out[49]: 5

In [50]: